# dippy-studio-bittensor

./: .gitmodules  README.md  requirements.validator.txt
docs/: architecture.md  miner.md  validator.md  x402.md
orchestrator/: README.md
orchestrator/clients/: miner_metagraph.py
orchestrator/services/: subnet_state_service.py
scripts/: start_validator.py
subnet/: README.md  pyproject.toml
validator/: validator.py
